--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of r-mass-spectrometry-tools is to house a set of functions for processing mass spectrometry data.
+The goal of r-mass-spectrometry-tools is to contain functions for processing mass spectrometry data.
 
 What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
