--- a/README.Rmd
+++ b/README.Rmd
@@ -16,28 +16,13 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of r-mass-spectrometry-tools is to contain functions for processing mass spectrometry data.
+
+The goal of r-mass-spectrometry-tools is to house functions for processing mass spectrometry data.
 
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+<center>
 
+![](README_files/Orbitrap.png){width=50%}
 
-![](../../Garcia_Lab/Figures/Orbitrap.png)
+</center>
 
-```{r cars}
-
-summary(cars)
-
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-
-plot(pressure)
-
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
