--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,8 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 
-The goal of r-mass-spectrometry-tools is to house functions for processing mass spectrometry data.
+
+This repository contains functions for analyzing quantitative mass spectrometry data. 
 
 
 <center>
